// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/QuestionMarkTooltip Default 1`] = `
<h3
  className="inline-block mt-16"
>
  Here is a heading that needs some explaining
   
  <p
    className="inline-block transform -translate-y-0.5"
  >
    <button
      aria-describedby="one-tooltip"
      className="rounded-full w-4 h-4 text-[10px] bg-gray-50 text-gray-600 border border-gray-500 focus:outline-none focus:ring"
      id="one-tooltip"
    >
      <span
        aria-hidden={true}
      >
        ?
      </span>
      <span
        className="sr-only"
      >
        title one
         Erklärung
      </span>
    </button>
    <span
      className="undefined -left-2 absolute top-9 w-[224px] h-auto p-4 bg-gray-900 text-white text-xs whitespace-normal"
      id="one-tooltip"
      role="tooltip"
    >
      <span
        aria-hidden={true}
        className="absolute w-0 h-0 -top-2 left-2"
        style={
          Object {
            "borderBottom": "solid rgb(30, 26, 90) 8px",
            "borderLeft": "solid transparent 8px",
            "borderRight": "solid transparent 8px",
          }
        }
      />
      I am a tooltip, I explain things
    </span>
  </p>
</h3>
`;

exports[`Storyshots UI Elements/QuestionMarkTooltip Long Content 1`] = `
<h3
  className="inline-block mt-16"
>
  Here is a heading that needs some explaining
   
  <p
    className="inline-block transform -translate-y-0.5"
  >
    <button
      aria-describedby="two-tooltip"
      className="rounded-full w-4 h-4 text-[10px] bg-gray-50 text-gray-600 border border-gray-500 focus:outline-none focus:ring"
      id="two-tooltip"
    >
      <span
        aria-hidden={true}
      >
        ?
      </span>
      <span
        className="sr-only"
      >
        title two
         Erklärung
      </span>
    </button>
    <span
      className="undefined -left-2 absolute top-9 w-[224px] h-auto p-4 bg-gray-900 text-white text-xs whitespace-normal"
      id="two-tooltip"
      role="tooltip"
    >
      <span
        aria-hidden={true}
        className="absolute w-0 h-0 -top-2 left-2"
        style={
          Object {
            "borderBottom": "solid rgb(30, 26, 90) 8px",
            "borderLeft": "solid transparent 8px",
            "borderRight": "solid transparent 8px",
          }
        }
      />
      <div>
        <p>
          Hi there.
        </p>
        <p>
          I am also 
          <em>
            tooltip content
          </em>
          .
        </p>
        <p>
          Only this time with 
          <strong>
            more content 
          </strong>
           and using several DOM nodes as the content.
        </p>
      </div>
    </span>
  </p>
</h3>
`;
